3.2.0 (#13)
Version 3.2.0 with support for the optional eIDAS attributes Nationality, CountryOfBirth and CountryOfResidence.